# eksamensprojekt-matematik-motor

./: .gitignore  CMakeLists.txt  Doxyfile  Projektbeskrivelse.md  README.md  application.cpp  operators.h
DesignTing/: Brugerhistorie1.txt  Brugerhistorie2.txt  disposition-Niklas.txt
LOG/: 03-05-2021.txt  09-04-2021.txt  12-04-2021  14-04-2021.txt  19-04-2021.txt  24-03-2021  26-03-2021  26-04-2021  28-04-2021.txt  sidste_logbog_;(.txt
build-Debug/: CMakeCache.txt  Eksamensprojekt-mathengine  Eksamensprojekt-mathengine.cbp  Makefile  cmake_install.cmake
dox/html/: 09-04-2021_8txt.html  14-04-2021_8txt.html  19-04-2021_8txt.html  _brugerhistorie1_8txt.html  _brugerhistorie2_8txt.html  _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _c_make_c_x_x_compiler_id_8cpp.html  _c_make_c_x_x_compiler_id_8cpp_source.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _projektbeskrivelse_8md.html  _target_directories_8txt.html  annotated.html  application_8cpp.html  application_8cpp__incl.map  application_8cpp__incl.md5  application_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.map  application_8cpp_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.md5  application_8cpp_source.html  class_exponential.html  class_exponential__coll__graph.map  class_exponential__coll__graph.md5  class_exponential__inherit__graph.map  class_exponential__inherit__graph.md5  (+258 more)
src/: expression.cpp  expression.h  expression.hpp  factor.hpp  globals.cpp  globals.h  globals.hpp  helpfunctions.h  helpfunctions.hpp  subexpression.hpp  term.cpp  term.hpp  token.cpp  token.h  token.hpp
(+118 files in other folders)
