# CMakeList.txt : CMake project for Eksamensprojekt-mathengine, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Eksamensprojekt-mathengine")

# Add source to this project's executable.
add_executable (Eksamensprojekt-mathengine "application.cpp"  "operators.h")

# TODO: Add tests and install targets if needed.
